[package]
name = "vulkaning"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
color-eyre = "0.6.2"
egui = "0.25.0"
egui-ash = { version = "0.4.0", features = ["gpu-allocator"] }
env_logger = "0.10.1"
glam = { version = "0.25", features = ["bytemuck"] }
gpu-allocator = { version = "0.25.0", features = ["egui", "egui_extras"] }
image = "0.24"
log = "0.4"
num = "0.4"
presser = "0.3.1"
raw-window-handle = "0.5"
tobj = { version = "4.0.0", features = ["async", "reordering"] }

[dependencies.winit]
version = "0.29"
features = ["rwh_05"]

[build-dependencies]
color-eyre = "0.6.2"
shaderc = "0.8"
