[package]
name = "vulkaning"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
exclude = ["archive"]

# Enable small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
color-eyre = "0.6.2"
egui-winit-ash-integration = "0.6.0"
glam = { version = "0.25", features = ["bytemuck"] }
gpu-allocator = { version = "0.25.0", features = ["egui", "egui_extras"] }
image = "0.24"
num = "0.4"
presser = "0.3.1"
raw-window-handle = "0.5"
tobj = { version = "4.0.0", features = ["async", "reordering"] }

[dependencies.winit]
version = "0.29"
features = ["rwh_05"]

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
  "bevy_winit",
  "x11",
  "wayland",
  "multi-threaded",
  "bevy_asset",
  "bevy_debug_stepping",
  "bevy_scene",
]

[build-dependencies]
color-eyre = "0.6.2"
shaderc = "0.8"
